# code-samples

./: .gitignore  Cargo.toml  LICENSE  config-migration.py  flow-dump-test.py  pyproject.toml  route-check.py  ws-util.py
.cargo/: config.toml
flowmon/: Cargo.toml
flowmon/src/: lib.rs  tcp.rs  udp.rs
netperfbackend/: app.py  db.py  models.py
netperfproto/: client.py  control.py  server.py  session.py  tcp.py  udp.py
pyinvindex/: invindex.py
rust-sample/: Cargo.toml
sip/src/: lib.rs
velo-branch-deployment-tool/: main.py  models.py  util.py
velo-config-insights/: main.py
velo-config-modification/: add-zscaler-nsd-default-route.py  create-object-group.py  disable-interface.py  edge-bp-fw-poc.py  edit-vlan.py  fix-zscaler-css.py
velo-docsearch/: main.py
velo-edge-model-migration/: app.py  config-migration.yaml  model-data.json
velo-enterprise-replicator/: models.py  replicate.py
velo-gateway-assignment-tool/: compute-assignments.py  models.py  util.py
velo-misc/: appmap-set-do-not-slowlearn.py  capture-udp.py  poll-snmp.py
velo-profile-migration-tool/: process-assignments-async.py
velo-profile-sync/: sync.py
velo-remote-diagnostics/: bulk-diag.py  remote-diag-skeleton.py  route-check.py
velo-reporting/: edge-firmware-audit.py  event-streaming.py  export-zscaler-node-assignments.py  flow-dump-test.py  link-analytics.py  top-talker-edges.py  wan-measurement-auditor.py
velo_api_tester/: README.md  __init__.py
veloapi/: api.py  apiv2.py  models.py  patch.py  pydantic.py  pydantic_shared.py  routes.py  util.py
veloapi/configmodules/: edge_analytics.py  edge_atp.py  edge_control.py  edge_device_settings.py  edge_firewall.py  edge_qos.py  edge_wan.py  module_base.py  profile_analytics.py  profile_atp.py  profile_device_settings.py  profile_firewall.py  profile_qos.py  profile_wan.py
velomcp/: server.py
