#:schema https://json.schemastore.org/pyproject.json

[project]
name = "code-samples"
version = "0.1.0"
description = ""
authors = [{ name = "Nick Barrett" }]
requires-python = "~=3.13"
dependencies = [
    "aiohttp>=3.10.6,<4",
    "requests>=2.32.3,<3",
    "python-dotenv>=1.0.1,<2",
    "websockets~=13.1",
    "pyyaml>=6.0.2,<7",
    "aiostream>=0.6.2,<0.7",
    "dataclasses-json>=0.6.7,<0.7",
    "jsondiff>=2.2.1,<3",
    "ijson>=3.3.0,<4",
    "duckdb>=1.2.0,<2",
    "polars>=1.22.0,<2",
    "pyarrow>=19.0.0,<20",
    "fastapi[standard]>=0.115.8,<0.116",
    "apscheduler>=3.11.0,<4",
    "dataclass-csv>=1.4.0,<2",
    "geopy>=2.4.1,<3",
    "jsonpatch~=1.33",
    "intervaltree>=3.1.0,<4",
    "matplotlib>=3.10.1,<4",
    "pandas>=2.2.3,<3",
    "pysnmp>=7.1.16,<8",
    "loguru>=0.7.3,<0.8",
    "uvicorn>=0.34.0,<0.35",
    "sqlmodel>=0.0.24,<0.0.25",
    "nltk>=3.9.1,<4",
    "beautifulsoup4>=4.13.3,<5",
    "pyhumps>=3.8.0,<4",
    "mcp[cli]>=1.6.0",
]

[project.scripts]
velomcp = "velomcp:main"
velo_api_tester = "velo_api_tester:main"

[tool.ruff]
line-length = 120
select = ["ALL"]
target-version = "py313"
exclude = [
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".mypy_cache",
    ".git",
    ".vscode",
    "node_modules",
    ".cargo",
    "rust_target",
]

[tool.ruff.lint]
fixable = ["ALL"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.hatch.build.targets.sdist]
include = [
    "veloapi",
    "netperfproto",
    "netperfbackend",
    "pyinvindex",
    "velomcp",
    "velo_api_tester",
]

[tool.hatch.build.targets.wheel]
include = [
    "veloapi",
    "netperfproto",
    "netperfbackend",
    "pyinvindex",
    "velomcp",
    "velo_api_tester",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

